Fix small padding overflow

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     justify-content: flex-end;
     align-items: center;
     flex: 1;
-    padding: 15px 15px;
+    padding: 10px 15px;
     font-size: 50px;
 }
 
